# oz_django3

./: .gitignore  manage.py  pyproject.toml
oz_django3/: asgi.py  settings.py  urls.py  wsgi.py
tabom/: service.py
tabom/tests/: test_article_service.py  test_like_service.py
