[tool.poetry]
name = "oz-django3"
version = "0.1.0"
description = ""
authors = ["정승원(SeungWon.Jeong)/OnC <seungwon.jeong@wesang.com>"]
readme = "README.md"
packages = [{include = "oz_django3"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
django-stubs = "^5.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
